--- a/20200125/index.html
+++ b/20200125/index.html
@@ -13185,6 +13185,124 @@ a.anchor-link {
 {
   background: #727272 !important;
 }
+/* スライド全体のフォントの種類、サイズ */
+.rise-enabled .reveal .slides
+{
+    font-size: 26px;
+    font-family: "Hiragino Kaku Gothic ProN", Meiryo, sans-serif;
+    font-family: "Ricty", monospace;
+}
+
+/* 文字の色関係 */
+.rise-enabled .reveal .slides :-webkit-any(h3, h4, h5, h6, p, li),
+.rise-enabled .reveal .slides div.output_subarea>pre
+{
+	margin: 1px 0;
+    color: #fcf1d3;
+}
+
+.rise-enabled .reveal .slides div.output_subarea.output_html.renderd_html.output_result>pre
+{
+	color: #fcf1d3;
+}
+
+/* h1のデザイン */
+.rise-enabled .reveal .slides :-webkit-any(h1)
+{
+    padding: 0.5em 1em;
+    margin: 1px 0;
+    color: #fcf1d3;
+    background: #44a5cb;
+    border-bottom: solid 6px #3f87ce;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.25);
+    border-radius: 9px;
+    vertical-align: text-top;
+    font-size: 48pt;
+}
+p {
+    margin: 0;
+    padding: 0;
+}
+
+.rise-enabled .reveal .slides :-webkit-any(h2) {
+    padding: 0 0 0.25em 0.5em;/*上下 左右の余白*/
+    color: #fcf1d3;/*文字色*/
+    background: transparent;/*背景透明に*/
+    border-left: solid 5px #44a5cb;/*左線*/
+    font-size: 42pt;
+}
+
+/* リンクハイライト */
+.rise-enabled .reveal .slides a
+{
+    color: yellow;
+}
+
+/* スライド背景色 */
+.rise-enabled .reveal
+{
+    background-color: #3261ab;
+    /* element-overrides */
+}
+
+/* table のデザイン */
+table{
+  border-collapse:collapse;
+  margin:0 auto;
+}
+td,th{
+  padding:10px;
+}
+th{
+  color:#fff;
+  background:#005ab3;
+}
+table tr:nth-child(odd){
+  background:#e6f2ff;
+}
+table tr:nth-child(even){
+	background:#ffffff;
+}
+td{
+  border-bottom:2px solid #80bcff;
+}
+
+/* In[] の色 */
+.rise-enabled .reveal .slides div.prompt.input_prompt
+{
+	margin: 1px 0;
+    color: #80D5FF;
+}
+
+/* Out[]の色 */
+.rise-enabled .reveal .slides div.prompt.output_prompt
+{
+	margin: 1px 0;
+    color: #FF1A40;
+}
+
+/* Outに出力されるwarningの背景 */
+.rise-enabled .reveal .slides div.warn
+{
+    color: #44a5cb
+}
+
+/* html表記のoutput を調整 */
+.rise-enabled .reveal .slides div.output_subarea.output_html.rendered_html.output_result
+{
+	color: white;
+}
+
+/* コードの背景色 表面色 フォントサイズ */
+.rise-enabled .reveal .slides code
+{
+	margin: 1px 0;
+	background-color: brack;
+    /*background-color: transparent; */
+    color: white;
+    font-size: 60%;
+}
+
 </style>
 
 <!-- Custom stylesheet, it must be in the same directory as the html file -->
